--- a/blank/templates/base.html
+++ b/blank/templates/base.html
@@ -16,8 +16,9 @@
 
 <body>
   <div class="container-fluid">
-    <div>{% block content %}{% endblock %}</div>
+    <div>{% block content %}block content ? is not shown{% endblock %}</div>
   </div>
+    <p>line in base.html</p>
 </body>
 
 </html>
