edited in w3sch

--- a/blank/templates/index.html
+++ b/blank/templates/index.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<h1>My awesome space</h1>
-    <p>line in index.html</p>
+<h1>test space</h1>
 {% endblock %}
